# modal-fish-s2-pro-deployment

./: .env.example  AGENT_INSTRUCTIONS.md  Caddyfile  Dockerfile  Makefile  README.md  bot.py  dashboard.html  deploy_modal.py  docker-compose.yml  entrypoint.sh  fish_speech_tts.py  patch_torchaudio.py  pyproject.toml  requirements.txt  server.py  setup.sh  stt_server.py  tts_server.py  whisper_stt.py
